...
            .navigationBarItems(trailing: Button(NSLocalizedString("Lend", comment: "Button")) {
                if let friend = selectedFriend {
                    viewModel.lendItem(to: friend, loanDate: loanDate, returnDate: returnDate)
                    dismiss()
                }
            }
            .accessibilityIdentifier("lendButton"))
        }
    }
}
